--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@react-native-community/slider": "^4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.71.11",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-gesture-handler": "^2.10.0",
     "react-native-get-location": "^3.0.1",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-gesture-handler": "^2.10.0",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-modal": "^13.0.1",
     "react-native-responsive-dimensions": "^3.1.1",
@@ -28,6 +29,7 @@
     "react-native-sound": "^0.11.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.10.0",
+    "react-native-vision-camera": "^2.15.6",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1"
   },
